--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.12",
+    "swiper": "^11.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
